fix an overflow bug

--- a/src/styles/modules/base.styl
+++ b/src/styles/modules/base.styl
@@ -8,6 +8,7 @@ body
   line-height normal
   color clr-black
   background clr-white
+  overflow-x hidden
   .header-bg
     background-repeat no-repeat
     background-size cover
